--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "csv-parser": "^3.2.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "is-port-reachable": "^4.0.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
-    "mysql2": "^3.14.1"
+    "mysql2": "^3.14.1",
+    "tcp-ping": "^0.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
