--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^5.1.0",
     "is-port-reachable": "^4.0.0",
     "jsonwebtoken": "^9.0.2",
+    "mssql": "^11.0.1",
     "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.1",
     "tcp-ping": "^0.1.1"
