--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "csv-parser": "^3.2.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "iconv-lite": "^0.6.3",
     "is-port-reachable": "^4.0.0",
     "jsonwebtoken": "^9.0.2",
     "mssql": "^11.0.1",
