이메일 전송 기능을 위한 환경 셋팅

--- a/.env
+++ b/.env
@@ -4,3 +4,7 @@ DB_PASSWORD=1111
 DB_NAME=mydb
 JWT_SECRET=mysecretkey
 USER_INIT_PASSWORD=1234
+SMTP_USER=userid
+SMTP_PASSWORD=password
+SMTP_HOST=smtp.example.com
+SMTP_PORT=587 
