--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mssql": "^11.0.1",
     "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.1",
+    "nodemailer": "^7.0.3",
     "tcp-ping": "^0.1.1"
   },
   "devDependencies": {
