--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.1",
     "nodemailer": "^7.0.3",
+    "papaparse": "^5.5.3",
     "tcp-ping": "^0.1.1"
   },
   "devDependencies": {
