--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mssql": "^11.0.1",
     "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^7.0.3",
     "papaparse": "^5.5.3",
     "pg": "^8.16.2",
